--- a/index.html
+++ b/index.html
@@ -3,25 +3,109 @@
   <head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <script src="timeago.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <script>
 
+    <div id = "container">
+      <div id = "tweet-feeds">
+        <div id = "logo">Twittler</div> <!--logo of Twittler-->
+        <div id = "tweet-btn">
+          <h2 id ="tweet-number"></h2>
+        </div>
+        <div id = "inner-tweet-container"></div>
+        <div id = "inner-tweet-container-personal"></div>
+      </div> <!-- end display-tweet -->
+    </div> <!-- end container -->
+
+
+    <script>
+      var total_tweets = 0;
+      var count = 0;
+      var display = 0;
       $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
+        // var $body = $('body');
+        // $body.html('');
+        //
+        // var index = streams.home.length - 1;
+        // while(index >= 0){
+        //   var tweet = streams.home[index];
+        //   var $tweet = $('<div></div>');
+        //   $tweet.text('@' + tweet.user + ': ' + tweet.message);
+        //   $tweet.appendTo($body);
+        //   index -= 1;
+        // }
+
+        //query on .timeago from timeago.js
+        jQuery(".timeago").timeago();
+
+        //query on #tweet-number for clickable button to display Tweets
+        $("#tweet-number").on("click", displayTweets);
 
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
+          var timeAgo = jQuery.timeago(streams.home[display].created_at.toISOString());
+          $tweet.addClass('timeago');
+          $tweet.attr('title', timeAgo);
+          $tweet.html("<span id='at'>" + "@" + "</span>" + "<span class='tweet_user'>" + tweet.user + "</span>" + ': ' + tweet.message + "<span id='time'>" + timeAgo + "</div>");
+          $tweet.prependTo($('#inner-tweet-container'));
+          total_tweets++;
           index -= 1;
         }
 
+        function displayFeedsBoard(){
+          count = streams.home.length - 1;
+          display = count - total_tweets;
+          setTimeout(displayFeedsBoard, 500);
+        }
+        displayFeedsBoard();
+
+        function changeNumber(){
+          if(display < 1){
+            $('#tweet-number').hide();
+          }
+          else{
+            $('#tweet-number').fadeIn().text("New Tweets: " + display);
+          }
+          setTimeout(changeNumber, 500);
+        }
+        changeNumber();
+
+        $(".tweet_user").on("click" ,function(){
+              var userName = $(this).text();
+              var shortName = streams.users[userName];
+              for(var i=0; i < shortName.length; i++){
+                  var $tweet = $('<div></div>');
+                  var timeAgo = jQuery.timeago(shortName[i].created_at.toISOString());
+                  $tweet.addClass('timeago');
+                  $tweet.attr('title', timeAgo);
+                  $tweet.html("<span id='at'>" + "@" + "</span>" + "<span class='tweet_user'>" + userName + "</span>" + ': ' + shortName[i].message + "<span id='time'>" + timeAgo + "</div>");
+                  $('#inner-tweet-container').slideUp();
+                  $('#inner-tweet-container-personal').slideDown();
+                  $tweet.prependTo($('#inner-tweet-container-personal')).hide().slideDown("slow");
+                  $("#tweet-btn").hide();
+                  total_tweets++;
+                  display -= 1;
+              }
+        });
       });
 
+      function displayTweets(){
+        while(display >= 1){
+          var tweet = streams.home[display];
+          var $tweet = $('<div></div>');
+          var timeAgo = jQuery.timeago(streams.home[display].created_at.toISOString());
+          $tweet.addClass('timeago');
+          $tweet.attr('title', timeAgo);
+          $tweet.html("<span id='at'>" + "@" + "</span>" + "<span class='tweet_user'>" + tweet.user + "</span>" + ': ' + tweet.message + "<span id='time'>" + timeAgo + "</div");
+          $tweet.prependTo($('#inner-tweet-container')).hide().fadeIn("slow");
+          total_tweets++;
+          display -= 1;
+        }
+      };
     </script>
   </body>
 </html>
